--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/estates?createDatabaseIfNotExist=true
+spring.datasource.username=springuser
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
